# datams

./: .gitignore  README.md  make_celery.py  pyproject.toml  requirements.txt  wsgi.py
datams/: __init__.py  celery.py  cli.py  config.yml  flask.py  flask_login.py  prom.py  redis.py  utils.py
datams/db/: __init__.py  auth.py  core.py  datatables.py  formatting.py  requests.py  tables.py  utils.py  views.py
datams/db/queries/: __init__.py  delete.py  insert.py  select.py  update.py
datams/static/scripts/: base.js
datams/static/styles/: base.css
datams/templates/: 404.html  base.html  main.html  root.html
datams/templates/components/: __init__.html  accordian.html  avatar.html  banner.html  contactcards.html  contactcards2.html  loader.html  modal.html  navbar.html  summary.html  table.html
datams/templates/contact/: details.html  edit.html  root.html
datams/templates/deployment/: details.html  details_orig.html  edit.html  root.html
datams/templates/equipment/: details.html  edit.html  root.html
datams/templates/file/: details.html  edit.html  pending.html  root.html
datams/templates/mooring/: details.html  edit.html  root.html
datams/templates/organization/: details.html  edit.html  root.html
datams/views/: __init__.py  contact.py  deployment.py  equipment.py  file.py  file_orig.py  mooring.py  organization.py  user.py
docker/: config.yml  datams.dockerfile  deploy.yaml  nginx.dockerfile  run_celery.sh  run_gu.sh
docker/installation/: datams  nginx.conf
installation/: celery.service  datams  gunicorn.service  redis.service
(+34 files in other folders)
