[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datams"
version = "0.0.1"
description = "Data Management Application built on Flask.  "
license = "Apache-2.0"
readme = "README.md"

repository = "https://github.com/MaxGunton/datams"
# homepage = "https://maxgunton.github.io/datams/"
# documentation = "https://maxgunton.github.io/datams/"

authors = [
    "Max Gunton <maxgunton@hotmail.com>",
]
maintainers = [
    "Max Gunton <maxgunton@hotmail.com>",
]

keywords = ["data", "sql", "hydrophone", "deployments"]
packages = [
    {include = "datams"},
]

[tool.poetry.dependencies]
celery = ">=5.2.7"
click = ">=8.1.3"
flask = ">=2.2.5"
# flask-login = ">=0.6.2"
flask-login = { git = "https://github.com/maxcountryman/flask-login", branch = "main"}
gunicorn = ">=21.2.0"
hiredis = ">=1.0.0"
importlib-metadata = "4.13.0"
numpy = ">=1.21.6"
opencv-python = ">=4.8.0.76"
pandas = ">=1.3.5"
psycopg2 = ">=2.9.9"
python = ">=3.8,<3.11"
PyYAML = ">=6.0.1"
redis = ">=5.0.1"
seaborn= ">=0.12.2"
sqlalchemy = ">=2.0.20"
sqlparse = ">=0.4.4"
tqdm = ">=4.66.1"
werkzeug = ">=2.2.3"

[tool.poetry.scripts]
datams-init-db = "datams.cli:init_db_command"
datams-wipe-db = "datams.cli:wipe_db_command"
datams-resolve-files = "datams.cli:resolve_files_command"
datams-create-user = "datams.cli:create_user_command"
datams-delete-user = "datams.cli:delete_user_command"